--- a/styles/footer.css
+++ b/styles/footer.css
@@ -11,6 +11,11 @@ body {
     align-self: start;
     padding-left: 30px;
 }
+/* @media only screen and (min-width: 768px) and (max-width: 1023px){
+    .footer-logo.mobile {
+        padding-left: 30px;
+    }
+} */
 .footer {
     margin-top: 40px;
     display: flex;
