--- a/styles/general.css
+++ b/styles/general.css
@@ -3,12 +3,31 @@
     /* font-weight: normal; */
   }
 
+
+
+
 .container {
   max-width: 1200px; 
   margin-left: auto;
   margin-right: auto;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+@media only screen and (min-width: 414px) and (max-width: 1023px) {
+    .container {
+        padding-left: 30px;
+        padding-right: 30px;
+      }
+}
+@media only screen and (min-width: 1024px) {
+    .container {
+        max-width: 1200px; 
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 30px;
+        padding-right: 30px;
+      }
 }
 .bground-green {
     background-color: #263F3C;
@@ -134,7 +153,7 @@
 
 
 .call-out-section {
-    height: 50px;
+    height: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -159,4 +178,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+    .call-out {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
 }
