--- a/styles/header.css
+++ b/styles/header.css
@@ -21,9 +21,11 @@ body {
     background-color: #D7E0CA;
 }
 
-.uncommon-logo > img {
-    height: 24px;
-    margin-left: 40px;
+@media only screen and (max-width: 767px){
+    .uncommon-logo > img {
+        height: 24px;
+        margin-left: 10px !important;
+    }
 }
 #hamburger-icon {
     height: 30px;
@@ -85,6 +87,22 @@ body {
     justify-content: space-between;
     color: white;
 }
+
+@media only screen and (min-width: 768px) and (max-width: 1023px){
+    #hamburger-icon {
+        height: 30px;
+        position: fixed;
+        top: 10px;
+        right: 30px;
+        z-index: 1;
+    }
+    .uncommon-logo > img {
+        height: 24px;
+        margin-left: 30px !important;
+    }
+}
+
+
 @media only screen and (min-width: 1024px) {
     .uncommon-logo {
         height: 120px; 
